formation-stack.yml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: "LDAP Server"
Parameters:
  InstanceTypeParameter: 
    Type: String
    Default: t2.medium
    AllowedValues: 
      - t2.small
      - t2.medium
      - t3.medium
      - t2.large
  VpcId:
    Type: String
    Default: vpc-0000000
    Description: VPC ID.
  AMI:
    Type: AWS::EC2::Image::Id
    Default: ami-0000000
    Description: AMI for EC2.
  DiskSpace:
    Type: String
    Default: 16
    Description: Disk space size on ec2 instances
  InstanceKeypair:
    Type: AWS::EC2::KeyPair::KeyName
    Default: my-key
    Description: EC2 keypair to associate with instance.
  Subnet1:
    Type: AWS::EC2::Subnet::Id
    Default: "subnet-00000001"
    Description: The subnet to deploy one Ec2.
  Subnet2:
    Type: AWS::EC2::Subnet::Id
    Default: "subnet-00000002"
    Description: The subnet to deploy the other Ec2.
  NLBSubnets:
    Type: List<AWS::EC2::Subnet::Id>
    Default: "[subnet-00000001, subnet-00000002]"
    Description: The subnets to deploy the network load balancer.
  ConfigBucket:
    Type: String
    Default: config-bucket
    Description: The S3 bucket which contains the configuration.
  AllowedIPRange:
    Type: String
    Default: 10.0.0.0/24
    Description: The IPv4 address range to allow LDAP connections from.
  HostedZone:
    Type: String
    Default: example.com
  SnsArn:
    Type: String
    Default: arn:aws:sns:XXX:XXX:XXX
    Description: A SNS topic to send alerts to.

Resources:
  #
  # Security section
  #
  Ec2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement: 
          - 
            Effect: "Allow"
            Principal: 
              Service: 
                - "ec2.amazonaws.com"
            Action: 
              - "sts:AssumeRole"
      Path: "/"
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM"
      Policies:
        - PolicyName: "readConfigBucket"
          PolicyDocument: 
            Version: "2012-10-17"
            Statement: 
              - 
                Effect: "Allow"
                Action: 
                  - "s3:ListBucket"
                  - "s3:GetObject"
                Resource: 
                  - !Join [ "", [ "arn:aws:s3:::", Ref: ConfigBucket ] ]
                  - !Join [ "", [ "arn:aws:s3:::", Ref: ConfigBucket, "/*" ] ]
        - PolicyName: "writeConfigBucketBackupDir"
          PolicyDocument: 
            Version: "2012-10-17"
            Statement: 
              - 
                Effect: "Allow"
                Action: 
                  - "s3:PutObject"
                Resource: 
                  - !Join [ "", [ "arn:aws:s3:::", Ref: ConfigBucket, "/backup/*" ] ]

  Ec2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: This is the security group for the service
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - 
         IpProtocol: "tcp"
         FromPort: "22"
         ToPort: "22"
         CidrIp: !Ref AllowedIPRange
        - 
         IpProtocol: "tcp"
         FromPort: "389"
         ToPort: "389"
         CidrIp: !Ref AllowedIPRange
        - 
         IpProtocol: "tcp"
         FromPort: "636"
         ToPort: "636"
         CidrIp: !Ref AllowedIPRange
      Tags:
        -
         Key: Name
         Value: !Ref AWS::StackName

  SecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    DependsOn: Ec2SecurityGroup
    Properties:
      GroupId: !GetAtt Ec2SecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 389
      ToPort: 389
      SourceSecurityGroupId: !Ref Ec2SecurityGroup

  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    DependsOn:
     - Ec2Role
    Properties: 
      Path: "/"
      Roles: 
        - !Ref Ec2Role

  #
  # Compute Section
  #
  LDAP1Instance:
    Type: AWS::EC2::Instance
    DependsOn:
     - InstanceProfile
     - Ec2SecurityGroup
    Properties:
      ImageId: !Ref AMI
      SecurityGroupIds: 
       - !GetAtt Ec2SecurityGroup.GroupId
      InstanceType: !Ref InstanceTypeParameter
      KeyName: !Ref InstanceKeypair
      IamInstanceProfile: !Ref InstanceProfile
      SubnetId: !Ref Subnet1
      BlockDeviceMappings: 
        - DeviceName: "/dev/sdb"
          Ebs: 
            VolumeSize: "16"
            VolumeType: "gp2"
      UserData:
        "Fn::Base64":
          !Sub |
            #!/bin/bash
            echo "SECTION: Set metadata variables:"
            PRIVATE_IP=$(curl -fsq http://169.254.169.254/latest/meta-data/local-ipv4)
            INSTANCE_ID=$(curl -fsq http://169.254.169.254/latest/meta-data/instance-id)
            CONFIG_BUCKET='${ConfigBucket}'
            HOST_NAME='${AWS::StackName}-1'
            REPLICA_NAME='${AWS::StackName}-2'
            HOSTED_ZONE='${HostedZone}'
            TMP_INSTALL_DIR='/etc/setup-files'
            yum install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm -y

            echo "SECTION: Install base packages:"
            yum update -y
            yum install jq -y
            yum install python-pip -y
            pip install ansible
            
            echo "SECTION: Configure AWS CLI:"
            REGION=$(curl -s http://169.254.169.254/latest/dynamic/instance-identity/document | jq .region -r)
            aws configure set default.region $REGION
            
            echo "SECTION: Sync config bucket:"
            mkdir $TMP_INSTALL_DIR
            aws s3 cp s3://$CONFIG_BUCKET/ $TMP_INSTALL_DIR --recursive

            echo "SECTION: Run Ansible playbook:"
            echo "127.0.0.1 "${AWS::StackName}".$HOSTED_ZONE" | sed -e 's/\.$//' >> /etc/hosts
            echo "" >> $TMP_INSTALL_DIR"/vars/"$HOST_NAME
            echo "ldap_fqdn: "$HOST_NAME".$HOSTED_ZONE" >> $TMP_INSTALL_DIR"/vars/"$HOST_NAME
            echo "serverid: "$HOST_NAME >> $TMP_INSTALL_DIR"/vars/"$HOST_NAME
            echo "replica_host: "$REPLICA_NAME".$HOSTED_ZONE" >> $TMP_INSTALL_DIR"/vars/"$HOST_NAME
            echo "replication_nsds5replicaid: 1" >> $TMP_INSTALL_DIR"/vars/"$HOST_NAME
            ansible-playbook $TMP_INSTALL_DIR/389-ds.yml -e "@"$TMP_INSTALL_DIR"/vars/"$HOST_NAME --connection=local
            systemctl enable dirsrv@$HOST_NAME

            echo "SECTION: Waiting two minutes for other server to complete:"
            sleep 120

            echo "SECTION: Initalizing replication:"
            ansible-playbook $TMP_INSTALL_DIR/roles/389-ldap-server/init-replica.yml -e "@"$TMP_INSTALL_DIR"/vars/"$HOST_NAME --connection=local
      Tags:
        -
         Key: Name
         Value: !Join ['', [ !Ref 'AWS::StackName', '-1']]

  LDAP2Instance:
    Type: AWS::EC2::Instance
    DependsOn:
     - InstanceProfile
     - Ec2SecurityGroup
    Properties:
      ImageId: !Ref AMI
      SecurityGroupIds: 
       - !GetAtt Ec2SecurityGroup.GroupId
      InstanceType: !Ref InstanceTypeParameter
      KeyName: !Ref InstanceKeypair
      IamInstanceProfile: !Ref InstanceProfile
      SubnetId: !Ref Subnet2
      BlockDeviceMappings: 
        - DeviceName: "/dev/sdb"
          Ebs: 
            VolumeSize: "16"
            VolumeType: "gp2"
      UserData:
        "Fn::Base64":
          !Sub |
            #!/bin/bash
            echo "SECTION: Set metadata variables:"
            PRIVATE_IP=$(curl -fsq http://169.254.169.254/latest/meta-data/local-ipv4)
            INSTANCE_ID=$(curl -fsq http://169.254.169.254/latest/meta-data/instance-id)
            CONFIG_BUCKET='${ConfigBucket}'
            HOST_NAME='${AWS::StackName}-2'
            REPLICA_NAME='${AWS::StackName}-1'
            HOSTED_ZONE='${HostedZone}'
            TMP_INSTALL_DIR='/etc/setup-files'
            yum install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm -y

            echo "SECTION: Install base packages:"
            yum update -y
            yum install jq -y
            yum install python-pip -y
            pip install ansible
            
            echo "SECTION: Configure AWS CLI:"
            REGION=$(curl -s http://169.254.169.254/latest/dynamic/instance-identity/document | jq .region -r)
            aws configure set default.region $REGION
            
            echo "SECTION: Sync config bucket:"
            mkdir $TMP_INSTALL_DIR
            aws s3 cp s3://$CONFIG_BUCKET/ $TMP_INSTALL_DIR --recursive

            echo "SECTION: Run Ansible playbook:"
            echo "127.0.0.1 "${AWS::StackName}".$HOSTED_ZONE" | sed -e 's/\.$//' >> /etc/hosts
            echo "" >> $TMP_INSTALL_DIR"/vars/"$HOST_NAME
            echo "ldap_fqdn: "$HOST_NAME".$HOSTED_ZONE" >> $TMP_INSTALL_DIR"/vars/"$HOST_NAME
            echo "serverid: "$HOST_NAME >> $TMP_INSTALL_DIR"/vars/"$HOST_NAME
            echo "replica_host: "$REPLICA_NAME".$HOSTED_ZONE" >> $TMP_INSTALL_DIR"/vars/"$HOST_NAME
            echo "replication_nsds5replicaid: 2" >> $TMP_INSTALL_DIR"/vars/"$HOST_NAME
            ansible-playbook $TMP_INSTALL_DIR/389-ds.yml -e "@"$TMP_INSTALL_DIR"/vars/"$HOST_NAME --connection=local
            systemctl enable dirsrv@$HOST_NAME

            echo "SECTION: Waiting two minutes for other server to complete:"
            sleep 120

            echo "SECTION: Initalizing replication:"
            ansible-playbook $TMP_INSTALL_DIR/roles/389-ldap-server/init-replica.yml -e "@"$TMP_INSTALL_DIR"/vars/"$HOST_NAME --connection=local
      Tags:
        -
         Key: Name
         Value: !Join ['', [ !Ref 'AWS::StackName', '-2']]

  #
  # DNS Endpoints
  #
  LDAP1DNS:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: !Ref 'HostedZone'
      Comment: DNS endpoint for LDAP replication.
      Name: !Join ['', [ !Ref 'AWS::StackName', '-1', ., !Ref 'HostedZone']]
      Type: A
      TTL: '900'
      ResourceRecords:
      - !GetAtt LDAP1Instance.PrivateIp

  LDAP2DNS:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: !Ref 'HostedZone'
      Comment: DNS endpoint for LDAP replication.
      Name: !Join ['', [ !Ref 'AWS::StackName', '-2', ., !Ref 'HostedZone']]
      Type: A
      TTL: '900'
      ResourceRecords:
      - !GetAtt LDAP2Instance.PrivateIp

  #
  # Load balancing
  #
  NLB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Ref AWS::StackName
      Scheme: internal
      Subnets: !Ref NLBSubnets
      Type: network

  NLBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 30
      HealthCheckPort: 636
      HealthCheckProtocol: TCP
      HealthyThresholdCount: 3
      Name: !Ref AWS::StackName
      Port: 636
      Protocol: TCP
      Targets:
      - Id: !Ref LDAP1Instance
        Port: 636
      - Id: !Ref LDAP2Instance
        Port: 636
      TargetType: instance
      UnhealthyThresholdCount: 3
      VpcId: !Ref VpcId

  NLBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn: !Ref NLBTargetGroup
      LoadBalancerArn: !Ref NLB
      Port: 636
      Protocol: TCP
